hphp/test/slow/class_type_constant/recursion_type_structure.php.expectf
Fatal error: Cannot declare self-referencing type constant 'A::B' in %s/recursion_type_structure.php on line 9
